# mbfxml2ex

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yaml  run_tests.yaml
src/: mbfxml2ex.py  neurolucidaxml2ex.py
src/mbfxml2ex/: __init__.py  app.py  classes.py  conversions.py  definitions.py  exceptions.py  parsers.py  templates.py  utilities.py  zinc.py
tests/: profile_test.py  run_coverage_report.py  test_mbfxml2ex.py  test_neurolucidaxml2ex.py
tests/resources/: basic_heart_contours.xml  basic_tree.xml  basic_vessel_version_4.xml  complex_heart_contours.xml  contour_with_marker_names.xml  contour_with_multiple_set_properties.xml  contour_with_only_one_point.xml  densitometry_example.xml  large_tree_with_tree_order_prop.xml  multi_tree.xml  multi_tree_with_annotations.xml  puncta.xml  puncta_small.xml  puncta_with_set_prop.xml  random_file.txt  scale_example.xml  scale_example_2.xml  simple_vessel_structure.xml  three_heart_contours.xml  tracing_vessels_and_markers.xml  tree_contour_with_markers_no_ns.xml  tree_with_anatomical_terms.xml  tree_with_marker_in_tree_structure.xml  tree_with_markers.xml  tree_with_set_property.xml  tree_with_trace_association.xml  vagus_tracing.xml  vessel_ex_1.xml
